# CTF

./: .bashrc  .gitignore  .gitmodules  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
lib/util/: passwordencodeing.py
solve/1337uplive2024/CTF Mind Tricks/: writeup.md
solve/1337uplive2024/HoardedFlag/: writeup.md
solve/1337uplive2024/Password Management/: writeup.md
solve/1337uplive2024/logging/: encoding.py  extract.py  writeup.md
solve/hackthebox/forensic/Illumination/: writeup.md
solve/hackthebox/forensic/TrueSecrets/: Writeup.md  solve.py
tool/pcap/: strings-pcap.py
